Correcao de Status Pagamento + Logger
